--- a/frontoffice/src/index.html
+++ b/frontoffice/src/index.html
@@ -11,6 +11,7 @@
 		<title>Speedy Quiz</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="app-root"></div>
+		<div id="modal-root"></div>
 	</body>
 </html>
